# docsort

./: .gitignore  CHANGELOG.md  GUIDE.md  HANDOFF.md  MANIFEST.in  README.md  TAGS.md  TROUBLESHOOTING.md  build-exe.bat  doc_handler.py  pyproject.toml  requirements.txt  run.bat  run_gui.py  system_prompt.md  tui.py
.github/workflows/: ci.yml  release.yml
docs/: CHANGELOG.md  GUIDE.md  HANDOFF.md  MODEL-GUIDE.md  ROADMAP.md  TROUBLESHOOTING.md
docs/design/: council.md  gui-vision.md  taxonomy-generator.md
docs/superpowers/plans/: 2026-07-01-clean-phase-dedup-vendor.md  2026-07-01-clean-report-apply.md  2026-07-01-drive-index-archive-scan.md  2026-07-01-embed-cascade-tier.md  2026-07-01-embedding-infra.md  2026-07-01-near-duplicate-detection.md  2026-07-01-reorg-thin-chains.md
docs/superpowers/specs/: 2026-06-28-docsort-robustness-gui-design.md  2026-07-01-v0.13-drive-organizer-design.md
docsort/: __init__.py  cascade.py  clean.py  cli.py  config.py  dedup.py  gui.py  index.py  recon.py  reorg.py  runcore.py  tagsio.py  vendor.py
docsort/data/: TAGS.md  config.example.json  system_prompt.md
scripts/: run_cli.py  run_gui.py
tests/: test_cascade.py  test_clean.py  test_core.py  test_dedup.py  test_gui.py  test_index.py  test_recon.py  test_reorg.py  test_runcore.py  test_vendor.py
