[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-handler"
version = "0.7.1"
description = "Local-LLM document tagger + sorter: classify academic docs by stream/subject and move by filename prefix, fully offline."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Naivedya Sahu" }]
keywords = ["llm", "lm-studio", "pdf", "classification", "file-organization", "local-ai", "offline"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Utilities",
]
dependencies = ["pymupdf>=1.24"]

[project.optional-dependencies]
office = ["python-docx>=1.1", "python-pptx>=0.6"]
doc = ["pywin32>=306; sys_platform=='win32'"]
tui = ["rich>=13.0"]

[project.urls]
Homepage = "https://github.com/Naivedya-sahu/doc-handler"
Issues = "https://github.com/Naivedya-sahu/doc-handler/issues"

[project.scripts]
doc-handler = "doc_handler:main"

[tool.setuptools]
py-modules = ["doc_handler", "config", "tui"]
license-files = ["LICENSE"]

[tool.setuptools.data-files]
"share/doc-handler" = ["system_prompt.md"]
