[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "docsort"
version = "0.11.0"
description = "Local-LLM document tagger + sorter: classify academic docs by stream/subject and move by filename prefix, fully offline. CLI + modern Flet GUI."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Naivedya Sahu" }]
keywords = ["llm", "lm-studio", "pdf", "classification", "file-organization", "local-ai", "offline"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: OS Independent",
  "Topic :: Utilities",
]
dependencies = ["pymupdf>=1.24"]

[project.optional-dependencies]
office = ["python-docx>=1.1", "python-pptx>=0.6"]
doc = ["pywin32>=306; sys_platform=='win32'"]
gui = ["flet>=0.80"]
all = ["python-docx>=1.1", "python-pptx>=0.6", "pywin32>=306; sys_platform=='win32'", "flet>=0.80"]

[project.urls]
Homepage = "https://github.com/Naivedya-sahu/docsort"
Issues = "https://github.com/Naivedya-sahu/docsort/issues"

[project.scripts]
docsort = "docsort.cli:main"
docsort-gui = "docsort.gui:main"

[tool.setuptools.packages.find]
include = ["docsort*"]

[tool.setuptools.package-data]
docsort = ["data/*"]
